[package]
name = "meteoritus"
version = "0.1.0"
edition = "2021"
authors = ["Kalleby Santos"]
categories = ["web-programming", "filesystem"]
keywords = ["rocket", "tus", "file-upload", "resumable-file-upload"]

[dependencies]
rocket = "0.5.0-rc.2"
serde_json = "1.0.94"
base64 = "0.21.0"

[dependencies.uuid]
version = "1.3.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
