[package]
name = "meteoritus"
description = "A tus server integration for Rocket framework."
version = "0.1.1"
edition = "2021"
authors = ["Kalleby Santos"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kallebysantos/meteoritus"
homepage = "https://github.com/kallebysantos/meteoritus"
documentation = "https://docs.rs/meteoritus"
readme = "./README.md"
categories = ["web-programming", "filesystem", "http-server"]
keywords = ["rocket", "tus", "file-upload", "resumable-upload"]

[dependencies]
rocket = "0.5.0-rc.2"
serde_json = "1.0.94"
base64 = "0.21.0"

[dependencies.uuid]
version = "1.3.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
